# chem-model-edit

./: .coderabbit.yaml  .dependency-cruiser.cjs  .gitignore  AGENTS.md  Agent.md  Justfile  README.ja.md  README.md  dependency-cruiser.webpack.cjs  knip.json  nx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.codex/prompts/: speckit.analyze.md  speckit.checklist.md  speckit.clarify.md  speckit.constitution.md  speckit.implement.md  speckit.plan.md  speckit.specify.md  speckit.tasks.md  speckit.taskstoissues.md
.githooks/: pre-push
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: child-task.yml  epic.yml
.github/workflows/: ci.yml  deploy-cloud-run.yml  deploy-workers.yml  full-ci.yml  pr-policy.yml  workflow-lint.yml
apps/api/: .dockerignore  .env.aiida.dev.example  .env.compute.example  .env.control.example  Dockerfile  README.md  main.py  modal_app.py  models.py  project.json  pyproject.toml  pyrightconfig.json  worker.py
apps/api/app/: __init__.py  api.py  deps.py  errors.py  middleware.py
apps/api/app/routers/: auth.py  health.py  lattices.py  onboarding.py  runtime.py  structures.py  supercells.py  transforms.py  zpe.py
apps/api/app/schemas/: __init__.py  auth.py  base.py  common.py  errors.py  lattice.py  onboarding.py  runtime.py  structures.py  supercell.py  transforms.py  zpe.py
apps/api/config/slurm/: node-registration.example.json  onboarding.policy.example.json
apps/api/scripts/: export_openapi.py  mutmut_smoke.sh  schemathesis.sh
apps/api/services/: aiida_runtime_checks.py  cif.py  convex_event_relay.py  export.py  lattice.py  onboarding_manifest.py  parse.py  runtime.py  runtime_nodes.py  runtime_settings.py  structures.py  supercell.py  supercells.py  transplant.py  zpe_worker.py
apps/api/services/auth/: __init__.py  passwords.py  settings.py  store.py
apps/api/services/authn/: __init__.py  clerk.py  settings.py  types.py
apps/api/services/zpe/: __init__.py  backends.py  cache.py  compute_results.py  enroll.py  environ.py  http_queue.py  http_worker.py  io.py  job_meta.py  job_owner.py  job_state.py  lease.py  ops_flags.py  parse.py  paths.py  qe.py  queue.py  queue_targets.py  result_store.py  settings.py  slurm_policy.py  structured_log.py  submit_idempotency.py  thermo.py  worker.py  worker_auth.py
apps/api/tests/: conftest.py  test_auth_api.py  test_auth_contract.py  test_auth_identity.py  test_auth_passwords.py  test_auth_settings.py  test_auth_store.py  test_convex_event_relay.py  test_errors_handler.py  test_export.py  test_health_api.py  test_lattice.py  test_onboarding_dry_run_api.py  test_parse.py  test_runner_pool_scaler.py  test_runtime_api.py  test_runtime_nodes.py  test_runtime_targets.py  test_structures_persistence.py  test_supercell.py  test_transplant.py  test_validate_slurm_onboarding.py  test_zpe_api.py  test_zpe_compute_results.py  test_zpe_e2e_h2.py  test_zpe_e2e_molecules.py  test_zpe_enroll.py  test_zpe_enroll_api.py  test_zpe_http_queue.py  test_zpe_http_worker_integration.py  test_zpe_kpoints.py  test_zpe_lease_api.py  test_zpe_mock_backend.py  test_zpe_parse.py  test_zpe_parse_property.py  test_zpe_qe.py  test_zpe_queue_targets.py  test_zpe_result_store.py  test_zpe_runtime_guards.py  test_zpe_slurm_policy.py  (+5 more)
apps/web/: README.md  eslint.config.js  index.html  package.json  playwright.config.ts  project.json  stryker.config.json  tsconfig.eslint.json  tsconfig.json  vite.config.ts  wrangler.jsonc
convex/: README.md  projectionStateMachine.test.js  projectionStateMachine.ts  projectionUpdates.ts  runtimeTargets.ts  schema.ts  structures.ts
convex/_generated/: api.d.ts
docs/: aiida-managed-runtime-health-readiness.md  api-contract-operations.md  clerk-migration-kickoff.md  setup.ja.md  setup.md  zpe-remote-worker-http-spec.ja.md  zpe-worker-setup.ja.md  zpe-worker-setup.md
docs/adr/: ADR-0001-system-of-record-boundaries.md  ADR-0002-jobstate-contract.md  README.md  (+2 more)
investigations/: gra-128-uvlock-delta-decision-2026-02-17.md  gra-66-local-slurm-verification-strategy-2026-02-16.md  gra-71-ansible-wrapper-poc.md  gra-72-worker-preflight-checker.md  gra-79-one-command-management-node-enrollment.md  gra-82-management-node-enrollment-docker-validation.md  gra-83-slurm-docker-viability-2026-02-16.md  gra-84-aiida-slurm-smoke-2026-02-16.md  gra-89-aiida-slurm-smoke-vm-2026-02-16.md  gra-90-wsl-vm-hardening-research-2026-02-16.md  gra-94-vm-validation-runbook-update-2026-02-16.md  sandbox-uv-issue.md  setup-2026-01-10.md
scripts/: aiida-promotion-gate-vm-remote.sh  aiida-slurm-smoke-docker.sh  aiida-slurm-smoke-vm-remote.sh  aiida-slurm-smoke-vm.sh  aiida-tier2-gate-vm.sh  aiida-vm-bootstrap.sh  bootstrap-aiida-runtime.sh  bootstrap-management-node.sh  bootstrap-management-node.sh.sha256  bootstrap-slurm-byo.sh  find_free_port.sh  install-compute-node.sh  install-management-node.sh  just_env.sh  preflight-worker-single-node.sh  run-zpe-http-worker.sh  run-zpe-worker.sh  setup-dev.sh  submit-event-projection-smoke.sh  validate-slurm-onboarding.py  validate-slurm-vm-control-plane.sh  validate-slurm-vm-offline.sh  verify-management-node-enrollment-docker.sh  vm-baseline.sh  zpe-submit-h2.py
specs/: GRA-17-tenant-isolation-audit.md  README.md
(+282 files in other folders)
