[project]
name = "chem-model-api"
version = "0.1.0"
description = "Chem model editing API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ase>=3.27.0",
    "fastapi>=0.128.0",
    "pyjwt[crypto]>=2.10.1",
    "pydantic-settings>=2.8.0",
    "pymatgen>=2025.10.7",
    "redis>=5.0.8",
    "rq>=2.6.1",
    "uvicorn[standard]>=0.40.0",
]

[dependency-groups]
dev = [
    "fakeredis>=2.29.0",
    "httpx>=0.28.1",
    "mypy>=1.19.1",
    "pylint>=3.3.9",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "pytest-sugar>=1.1.1",
    "time-machine>=2.16.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.14.10",
    "schemathesis>=3.30.0",
]
aiida = [
    "aiida-core>=2.7.3",
]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --strict-config --tb=short --durations=10"
testpaths = ["tests"]
xfail_strict = true
asyncio_mode = "auto"
markers = [
    "e2e: end-to-end tests that require external dependencies (QE, pseudopotentials)",
    "contract: API contract validation tests",
    "slow: long-running tests",
    "schemathesis: schema-based API fuzzing tests",
]
